save last response

--- a/demo/demo-app.html
+++ b/demo/demo-app.html
@@ -16,7 +16,7 @@
             }
         </style>
 
-        <earth-cruddy status="{{status}}" debug>
+        <earth-cruddy status="{{status}}">
             <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <div slot="main-title">Lorem ipsum dolor sit amet</div>
             <div slot="content">
