add progress bar on save

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,9 +17,18 @@
 
     <link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
 
+    <link rel="import" href="../../polymer/lib/elements/custom-style.html">
+
 </head>
 <body unresolved>
 
+<custom-style>
+    <style is="custom-style">
+        demo-app{
+            /*--primary-color: red;*/
+        }
+    </style>
+</custom-style>
 
     <!--<dom-module id="my-element">-->
         <!--<template>-->
