--- a/demo/index3.html
+++ b/demo/index3.html
@@ -12,7 +12,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../earth-cruddy.html">
 
-    <link rel="import" href="demo-edit-layout.html">
+    <link rel="import" href="demo-app.html">
 
     <custom-style>
         <style is="custom-style" include="demo-pages-shared-styles">
@@ -24,7 +24,7 @@
     <h3>Basic earth-cruddy demo</h3>
     <demo-snippet>
         <template>
-            <demo-edit-layout></demo-edit-layout>
+            <demo-app></demo-app>
         </template>
     </demo-snippet>
 </div>
