mainTitle as properties

--- a/demo/demo-app.html
+++ b/demo/demo-app.html
@@ -16,13 +16,11 @@
             }
         </style>
 
-        <earth-cruddy status="{{status}}">
-            <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-            <div slot="main-title">Lorem ipsum dolor sit amet</div>
+        <earth-cruddy  main-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
             <div slot="content">
                 <h1>Page content</h1>
                 <air-cruddy-elasticsearch id="cruddy" data="{{data}}" url="http://localhost:9200/5elements/5elements"
-                                          entity-id="1"  debug>
+                                          entity-id="1">
                     <!--<div>id : [[data.id]]</div>-->
                     <div style="width: 600px">
 
