Toast as bottom

--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -133,11 +133,10 @@ Custom property                                 | Description                  |
             /*box-shadow: 0px 2px 6px #ccc;*/
             /*}*/
 
-
         </style>
 
 
-        <app-header-layout id="headerLayout" fullbleed>
+        <app-header-layout id="headerLayout" has-scrolling-region fullbleed>
 
             <app-header slot="header" condenses fixed effects="resize-title blend-background waterfall">
                 <!-- @see https://github.com/PolymerElements/app-layout/blob/master/demo/demo4.html -->
