--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -144,7 +144,7 @@ Custom property                                 | Description                  |
             <app-header slot="header" condenses fixed effects="resize-title blend-background waterfall">
                 <!-- @see https://github.com/PolymerElements/app-layout/blob/master/demo/demo4.html -->
                 <app-toolbar>
-                    <paper-icon-button icon="icons:arrow-back" on-tap="close" title="Close (Ctrl+K)"></paper-icon-button>
+                    <paper-icon-button icon="icons:arrow-back" on-tap="close" title="[[localize('close')]] (Ctrl+K)"></paper-icon-button>
                     <div main-title>[[mainTitle]]</div>
                     <!--<div condensed-title>[[condensed-title]]</div>-->
 
@@ -154,7 +154,7 @@ Custom property                                 | Description                  |
                     <!--<paper-icon-button icon="icons:autorenew" disabled$="[[!status.isDirty]]" title="Reload"-->
                     <!--on-tap="reload"></paper-icon-button>-->
 
-                    <paper-icon-button icon="icons:clear" disabled$="[[!status.isDirty]]" title="Reset (Ctrl+Z)"
+                    <paper-icon-button icon="icons:clear" disabled$="[[!status.isDirty]]" title="[[localize('dismiss')]] (Ctrl+Z)"
                                        on-tap="reset"></paper-icon-button>
                     <paper-icon-button icon="icons:check" disabled$="[[!status.isDirty]]" title="[[localize('save')]] (Ctrl+S)"
                                        on-tap="save"></paper-icon-button>
@@ -174,6 +174,7 @@ Custom property                                 | Description                  |
                         <paper-progress bottom-item id="progress"   indeterminate="[[progress]]" bottom-item></paper-progress>
                     </template>
                 </app-toolbar>
+
                 <!--<app-toolbar class="tall">-->
                     <!--<h1 id="mainTitle" main-title>Contact</h1>-->
                     <!--&lt;!&ndash;<slot main-title name="main-title"></slot>&ndash;&gt;-->
@@ -210,19 +211,19 @@ Custom property                                 | Description                  |
 
         <!-- Notification -->
         <paper-dialog id="actions" modal>
-            <h2>Dismiss Modification ?</h2>
+            <h2>[[localize('dismiss_modif')]]</h2>
             <div class="buttons">
                 <paper-button dialog-dismiss on-tap="closeForce">[[localize('dismiss')]]</paper-button>
                 <paper-button dialog-confirm autofocus on-tap="saveAndClose">[[localize('save')]]</paper-button>
             </div>
         </paper-dialog>
 
-        <earth-toast-action id="toastUndoReset" text="Reset" action="Undo"
+        <earth-toast-action id="toastUndoReset" text="[[localize('dismiss_modif')]]" action="[[localize('redo')]]"
                             fit-into="{{_toastFitInto()}}"
                             on-earth-toast-confirm="restoreResetSnapshot">
         </earth-toast-action>
 
-        <earth-toast-action id="toastSaveOrDismiss" text="Dismiss modification" action="Save"
+        <earth-toast-action id="toastSaveOrDismiss" text="[[localize('dismiss_modif')]]" action="[[localize('save')]]"
                             fit-into="{{_toastFitInto()}}"
                             on-earth-toast-confirm="saveAndClose">
         </earth-toast-action>
@@ -240,9 +241,17 @@ Custom property                                 | Description                  |
                     /**
                      * I18n
                      */
+                    languagesDefault: {
+                        type: String,
+                        value: 'en'
+                    },
+                    languagesSupported: {
+                        type: Array,
+                        value: ['fr', 'en']
+                    },
                     language: {
                         value: function () {
-                            return window.navigator.language;
+                            return this._computeSupportedLanguage( window.navigator.language);
                         },
                         type: String
                     },
@@ -355,6 +364,19 @@ Custom property                                 | Description                  |
 //                    });
 //                }
 //            }
+
+            // --- Language
+            // --- ---------------------------
+
+            _computeSupportedLanguage(expected) {
+                if (!this.languagesSupported.some( (elt) => {
+                        return elt === expected;
+                    })) {
+                    expected = this.languagesDefault;
+                };
+                return expected;
+            }
+
 
             // --- Config Target
             // --- ---------------------------
